--- a/gb/18/2/4/n10114988.md
+++ b/gb/18/2/4/n10114988.md
@@ -30,10 +30,6 @@
 <p>刘小姐（Paula liu）是Ocad University安大略艺术学院的一名大四学生，2015年跟随父母开始炼法轮功。在此之前，她曾经信仰佛教，但接触法轮功之后，认为法轮功才能让她真正从内心改变自己，她从一个爱生气的人变得和善。她表示，每一年给师父拜年都感到很高兴，以此感恩师父的慈悲救度。#</p>
 <figure id="attachment_10115683" aria-describedby="caption-attachment-10115683" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/02/download-48.jpg"><img class="wp-image-10115683 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/02/download-48-450x301.jpg" alt="" width="450" b="301" /></a><figcaption id="caption-attachment-10115683" class="wp-caption-text">新学员刘小姐（Paula liu）。（伊铃／大纪元）</figcaption></figure>
 <p>责任编辑：岳怡</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/3/5/13/n311584.md#1">多伦多盛大游行　迎接法轮大法日</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/5/11/3/n1106896.md#1">法轮大法学会公告后中共两官员加国被起诉</a></li>
@@ -42,40 +38,34 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/12/5/6/n3582442.md#1">绝望中获新生 多伦多学员感恩法轮大法</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/12/5/6/n3582484.md#1">组图：多伦多各界民众庆祝法轮大法日（二）</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/12/5/6/n3582538.md#1">组图：多伦多各界民众庆祝法轮大法日（三）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913502.md#1">渥太华准备禁止用动物进行化妆品实验</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911269.md#1">群殴杀害华裔男子 八少女寻求保释 受害者家属愤怒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/20/n13911253.md#1">报告：加拿大车保最贵前十城市 安省占三个</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145095.md#1">加国政府航空业力推人脸识别 专家忧隐私威胁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145143.md#1">加拿大安省越来越多房子低于挂牌价成交</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144257.md#1">多伦多2023年阅读量最多地产新闻：产权欺诈</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/23/n10420856.md#1" target="_blank">林辉：李大钊误导北大学生同时也在卖国</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910412.md#1">楚一丁：天道示警——三年死了四亿人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13909653.md#1">【未解之谜】西方极乐世界游记（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906526.md#1">【百年真相】犯四宗大罪 郭声琨下场如何？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906036.md#1">“压岁钱”怎么压岁？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906912.md#1">传统年俗代代传  只为守护天人相系的纽带</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/20/n13912043.md#1">【中国禁闻】网民返乡过年：沿路都在办丧事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/21/n13912084.md#1">【车评】越野用岩溪版 2023 Nissan Pathfinder Rock Creek</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13912774.md#1">【舞蹈三剑客】瘾 ：原创短片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/20/n13911407.md#1">习近平跟胡锦涛等前高官拜年 官媒表述异常</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/20/n13911319.md#1">自曝一天喝20多杯咖啡 刘德华言论引争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/20/n13911365.md#1">河北雄安新区火车站被曝长满野草 视频热传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/20/n13911319.md#1">自曝一天喝20多杯咖啡 刘德华言论引争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911274.md#1">五月天阿信请缨唱主题曲 周星驰回应嗨翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/20/n13912056.md#1">51岁李英爱近况曝光 冻龄外表令人惊艳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911244.md#1">林书豪突晒婚纱照 官宣2年前已完成婚礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/20/n13912020.md#1">中共央视主持人爆料：李谷一因染疫缺席春晚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911297.md#1">港大首创“先缩后除”疗法 中期肝癌根治率近55%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/21/n13912386.md#1">大自然是百病良药 多一动作提升止痛、消炎效果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911290.md#1">【医道心传】6个拉筋动作缩短五十肩病程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13909696.md#1">线粒体受损百病生？衰老和癌症其实可逆转</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/20/n13911483.md#1">原位癌是什么？5种原位癌发病率较高</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138664.md#1">冬至知多少？冬至文化典故与民俗集锦</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137969.md#1">美国防承包商称 蛋形UFO曾保存在51区</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127129.md#1">奉天命助圣王治世 百日为相白马化龙（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141715.md#1">【全球新闻】前央视喉舌王志安被起底 中共大外宣被看穿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141713.md#1">【晚间新闻】盘点2024年美中关系对抗焦点</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140545.md#1">【百年真相】一把火烧80吨 中共三次焚书运动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140113.md#1">中共国安插足经济引内讧 与胡锡进互怼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140579.md#1">中共告诉拜登将统一台湾 白宫回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140541.md#1">国务院智囊公开承认：历史留给中共时间已不多</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139785.md#1">杨幂着15公斤礼服 累到在电梯里两度面壁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139880.md#1">两次被主持人说错一电影名 梁朝伟一脸尴尬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140599.md#1">为妻治病花光积蓄且欠债 港导演彭发申请破产</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141362.md#1">黎姿曾因弟出车祸退圈 如今黎婴站立拍全家福</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141408.md#1">央视书画节目总导演楼建军猝死 终年56岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：法国传奇 爱马仕香水年终5折酬宾</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">旅行必备：旅行电源板3个USB 2个插座  41%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130699.md#1">蜂蜜止咳胜抗生素 五代中医传人: 这样吃很有效</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140144.md#1">睡前想什么会影响睡眠？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139698.md#1">预防第2大夺命癌症 早做一件事生存率超9成</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/2/4/n10114988.htm">谢师恩 多伦多法轮功学员给李洪志大师拜年</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/18/2/4/n10114988.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
